--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -16,15 +16,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "p:\\python\\Rebecka\\Preprocessing\\preprocessing.py:36: SyntaxWarning: invalid escape sequence '\\o'\n",
+      "p:\\python\\Rebecka\\Dropout\\Preprocessing\\preprocessing.py:36: SyntaxWarning: invalid escape sequence '\\o'\n",
       "  lazy_df = pl.scan_csv(f\"{DATA_PATH}\\ordcustprod.csv\",has_header=True,\n",
-      "p:\\python\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "p:\\python\\Rebecka\\Dropout\\Preprocessing\\preprocessing.py:36: SyntaxWarning: invalid escape sequence '\\o'\n",
+      "  lazy_df = pl.scan_csv(f\"{DATA_PATH}\\ordcustprod.csv\",has_header=True,\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'polars'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPreprocessing\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_data, preprocess_data\n",
+      "File \u001b[1;32mp:\\python\\Rebecka\\Dropout\\Preprocessing\\preprocessing.py:4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpolars\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpl\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m clean_company_names, normalize_baseproducts, ColumnVectorizer\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Import libraries\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'polars'"
      ]
     }
    ],
    "source": [
-    "from preprocessing import load_data, preprocess_data\n"
+    "from Preprocessing.preprocessing import load_data, preprocess_data\n"
    ]
   },
   {
@@ -4726,7 +4738,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
