--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -4,39 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading Data"
+    "# Loading Data from Preprocessing\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "p:\\python\\Rebecka\\Dropout\\Preprocessing\\preprocessing.py:36: SyntaxWarning: invalid escape sequence '\\o'\n",
-      "  lazy_df = pl.scan_csv(f\"{DATA_PATH}\\ordcustprod.csv\",has_header=True,\n",
-      "p:\\python\\Rebecka\\Dropout\\Preprocessing\\preprocessing.py:36: SyntaxWarning: invalid escape sequence '\\o'\n",
-      "  lazy_df = pl.scan_csv(f\"{DATA_PATH}\\ordcustprod.csv\",has_header=True,\n"
-     ]
-    },
-    {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'polars'",
+     "evalue": "No module named 'sklearn'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPreprocessing\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_data, preprocess_data\n",
-      "File \u001b[1;32mp:\\python\\Rebecka\\Dropout\\Preprocessing\\preprocessing.py:4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpolars\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpl\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m clean_company_names, normalize_baseproducts, ColumnVectorizer\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Import libraries\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'polars'"
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_data, preprocess_data\n",
+      "File \u001b[1;32mp:\\python\\Rebecka\\Dropout\\preprocessing\\preprocessing.py:5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpolars\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpl\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m clean_company_names, normalize_baseproducts, ColumnVectorizer\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Import libraries\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n",
+      "File \u001b[1;32mp:\\python\\Rebecka\\Dropout\\utils\\utils.py:3\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpolars\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpl\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LabelEncoder\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mclean_company_names\u001b[39m(df, column_name):\n\u001b[0;32m      6\u001b[0m     suffix_pattern \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mb(?:ag|gmbh|sa|ltd|inc|co|corporation|llc|sarl|bv|kg|se|nv|plc|limited)\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
      ]
     }
    ],
    "source": [
-    "from Preprocessing.preprocessing import load_data, preprocess_data\n"
+    "from preprocessing.preprocessing import load_data, preprocess_data\n"
    ]
   },
   {
@@ -51,14 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(50000, 2062)\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'polars'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpolars\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpl\u001b[39;00m\n\u001b[0;32m      5\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/ordcustprod.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m lazy_df \u001b[38;5;241m=\u001b[39m pl\u001b[38;5;241m.\u001b[39mscan_csv(\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m#\"ordcustprod.csv\",\u001b[39;00m\n\u001b[0;32m      8\u001b[0m     path, \u001b[38;5;66;03m# 1M rows\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     16\u001b[0m     truncate_ragged_lines\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m     17\u001b[0m     ignore_errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'polars'"
      ]
     }
    ],
@@ -89,17 +84,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\FahRe\\AppData\\Local\\Temp\\ipykernel_31608\\3289350417.py:1: PerformanceWarning: Determining the column names of a LazyFrame requires resolving its schema, which is a potentially expensive operation. Use `LazyFrame.collect_schema().names()` to get the column names without this warning.\n",
-      "  df.columns\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "['orig_ord_type_cde',\n",
+       " 'presc_no',\n",
+       " 'orig_ord_line_id',\n",
+       " 'galfrm_day',\n",
+       " 'Pharmacode',\n",
+       " 'Product ID MES',\n",
+       " 'Product Description',\n",
+       " 'Product Availability',\n",
+       " 'Product Dispension Type',\n",
+       " 'Product Dispension Type Class',\n",
+       " 'Product CatCode 1',\n",
+       " 'Product CatCode 2',\n",
+       " 'Product Generics Code',\n",
+       " 'Product Basename',\n",
+       " 'Product Company',\n",
+       " 'Product ATC (EPHMRA)',\n",
+       " 'Product DOT/Unit PCG',\n",
+       " 'Product Class PCG',\n",
+       " 'Product Type',\n",
+       " 'Product Segment',\n",
+       " 'iqvia_stop',\n",
+       " 'Main Supplier',\n",
+       " 'pipeline_actual',\n",
+       " 'pipeline_history',\n",
+       " 'pipeline_start',\n",
+       " 'pipeline_end',\n",
+       " 'official Pharmacode',\n",
+       " 'Product ATC (WHO)',\n",
+       " 'ATC (WHO) level 1',\n",
+       " 'ATC (WHO) level 2',\n",
+       " 'ATC (WHO) level 3',\n",
+       " 'ATC (WHO) level 4',\n",
+       " 'ATC (WHO) level 5',\n",
+       " 'Product Category Management',\n",
+       " 'Category Management level 1',\n",
+       " 'Category Management level 2',\n",
+       " 'Category Management level 3',\n",
+       " 'Category Management level 4',\n",
+       " 'Category Management level 5',\n",
+       " 'Product Therapeutic Index Code',\n",
+       " 'Product Unit Count',\n",
+       " 'Product Unit',\n",
+       " 'Product Unit Container',\n",
+       " 'Product Launch Date',\n",
+       " 'pharm_no',\n",
+       " 'nk_flg',\n",
+       " 'nk_year',\n",
+       " 'ord_no_new',\n",
+       " 'transaction_dte',\n",
+       " 'ord_type_cde',\n",
+       " 'shp_art_amt',\n",
+       " 'inv_dte',\n",
+       " 'cust_no',\n",
+       " 'ord_no',\n",
+       " 'shp_art_cnt',\n",
+       " 'ord_line_type_id',\n",
+       " 'hp_cde',\n",
+       " 'dr_ref_no',\n",
+       " 'shp_list_amt',\n",
+       " 'shp_art_val',\n",
+       " 'cool_shp_cde',\n",
+       " 'cool_class_cde',\n",
+       " 'shp_type_cde',\n",
+       " 'ord_line_id',\n",
+       " 'withdrawal_no',\n",
+       " 'doc_type_cde',\n",
+       " 'line_discount_cde',\n",
+       " 'interact_cde',\n",
+       " 'hb_dte',\n",
+       " 'tax_cde',\n",
+       " 'pay_rspbl',\n",
+       " 'pay_rspbl_type',\n",
+       " 'kko_flg',\n",
+       " 'Actual DOT/Unit',\n",
+       " 'Standard DOT/Unit',\n",
+       " 'Actual DOT',\n",
+       " 'Standard DOT',\n",
+       " 'hic_no_ord',\n",
+       " 'Mixed DOT',\n",
+       " 'transaction_year',\n",
+       " 'transaction_month',\n",
+       " 'transaction_day',\n",
+       " 'transaction_weekday',\n",
+       " 'Cust Basename Count',\n",
+       " 'Cust ATC5 Count',\n",
+       " 'Cust Segment Count',\n",
+       " 'Cust Pharmacode Count',\n",
+       " 'Cust Order Count',\n",
+       " 'Cust Activity Length',\n",
+       " 'Days Since Last Order',\n",
+       " 'lst_complaint_dte',\n",
+       " 'fault_cat_1',\n",
+       " 'fault_cat_2',\n",
+       " 'fault_cat_3',\n",
+       " 'fault_cat_4',\n",
+       " 'fault_cat_5',\n",
+       " 'fault_cat_6',\n",
+       " 'fault_cat_7',\n",
+       " 'fault_cat_8',\n",
+       " 'fault_cat_9',\n",
+       " 'fault_cat_10',\n",
+       " 'fault_cat_11',\n",
+       " 'fault_cat_12',\n",
+       " 'fault_cat_13',\n",
+       " 'fault_cat_14',\n",
+       " 'fault_cat_15',\n",
+       " 'fault_cat_16',\n",
+       " 'fault_cat_17',\n",
+       " 'fault_dte_1',\n",
+       " 'fault_dte_2',\n",
+       " 'fault_dte_3',\n",
+       " 'fault_dte_4',\n",
+       " 'fault_dte_5',\n",
+       " 'fault_dte_6',\n",
+       " 'fault_dte_7',\n",
+       " 'fault_dte_8',\n",
+       " 'fault_dte_9',\n",
+       " 'fault_dte_10',\n",
+       " 'fault_dte_11',\n",
+       " 'fault_dte_12',\n",
+       " 'fault_dte_13',\n",
+       " 'fault_dte_14',\n",
+       " 'fault_dte_15',\n",
+       " 'fault_dte_16',\n",
+       " 'fault_dte_17',\n",
+       " 'fault_descr_1',\n",
+       " 'fault_descr_2',\n",
+       " 'fault_descr_3',\n",
+       " 'fault_descr_4',\n",
+       " 'fault_descr_5',\n",
+       " 'fault_descr_6',\n",
+       " 'fault_descr_7',\n",
+       " 'fault_descr_8',\n",
+       " 'fault_descr_9',\n",
+       " 'fault_descr_10',\n",
+       " 'fault_descr_11',\n",
+       " 'fault_descr_12',\n",
+       " 'fault_descr_13',\n",
+       " 'fault_descr_14',\n",
+       " 'fault_descr_15',\n",
+       " 'fault_descr_16',\n",
+       " 'fault_descr_17',\n",
+       " 'fault_src_1',\n",
+       " 'fault_src_2',\n",
+       " 'fault_src_3',\n",
+       " 'fault_src_4',\n",
+       " 'fault_src_5',\n",
+       " 'fault_src_6',\n",
+       " 'fault_src_7',\n",
+       " 'fault_src_8',\n",
+       " 'fault_src_9',\n",
+       " 'fault_src_10',\n",
+       " 'fault_src_11',\n",
+       " 'fault_src_12',\n",
+       " 'fault_src_13',\n",
+       " 'fault_src_14',\n",
+       " 'fault_src_15',\n",
+       " 'fault_src_16',\n",
+       " 'fault_src_17',\n",
+       " 'fault_corrt_1',\n",
+       " 'fault_corrt_2',\n",
+       " 'fault_corrt_3',\n",
+       " 'fault_corrt_4',\n",
+       " 'fault_corrt_5',\n",
+       " 'fault_corrt_6',\n",
+       " 'fault_corrt_7',\n",
+       " 'fault_corrt_8',\n",
+       " 'fault_corrt_9',\n",
+       " 'fault_corrt_10',\n",
+       " 'fault_corrt_11',\n",
+       " 'fault_corrt_12',\n",
+       " 'fault_corrt_13',\n",
+       " 'fault_corrt_14',\n",
+       " 'fault_corrt_15',\n",
+       " 'fault_corrt_16',\n",
+       " 'fault_corrt_17',\n",
+       " 'trigger_sum',\n",
+       " 'days_since_lst_complaint',\n",
+       " 'title_txt',\n",
+       " 'plz',\n",
+       " 'district_cde',\n",
+       " 'adr_stat_cde',\n",
+       " 'birth_dte',\n",
+       " 'death_dte',\n",
+       " 'age_yr',\n",
+       " 'age_day',\n",
+       " 'language_cde',\n",
+       " 'sex_cde',\n",
+       " 'hic_entry_dte',\n",
+       " 'hic_no',\n",
+       " 'nc_action',\n",
+       " 'action_desc',\n",
+       " 'adr_typ',\n",
+       " 'custdeath',\n",
+       " 'is_pot_pregnant',\n",
+       " 'is_retired',\n",
+       " 'preg_prob',\n",
+       " 'TherdaysAct_A06A2',\n",
+       " 'TherdaysAct_A12A',\n",
+       " 'TherdaysAct_A12C',\n",
+       " 'TherdaysAct_B01C',\n",
+       " 'TherdaysAct_C01E',\n",
+       " 'TherdaysAct_C05A',\n",
+       " 'TherdaysAct_C06X',\n",
+       " 'TherdaysAct_D04A',\n",
+       " 'TherdaysAct_G01A',\n",
+       " 'TherdaysAct_G01D',\n",
+       " 'TherdaysAct_J02A',\n",
+       " 'TherdaysAct_M01A',\n",
+       " 'TherdaysAct_M02A',\n",
+       " 'TherdaysAct_M05X']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns = df.columns\n",
+    "selected_columns = columns[:211]\n",
+    "selected_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -1106,14 +1325,12 @@
        " ...]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.columns"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -4738,7 +4955,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
