--- a/Preprocessing/test.ipynb
+++ b/Preprocessing/test.ipynb
@@ -2,42 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "p:\\python\\Rebecka\\Dropout\\preprocessing\\data_loading.py:29: SyntaxWarning: invalid escape sequence '\\o'\n",
-      "  lazy_df = pl.scan_csv(f\"{self.data_path}\\ordcustprod.csv\", has_header=True,infer_schema_length=5000,low_memory=True, try_parse_dates=True,encoding=\"utf8\",\n",
-      "p:\\python\\Rebecka\\Dropout\\preprocessing\\data_loading.py:33: SyntaxWarning: invalid escape sequence '\\A'\n",
-      "  art_info = pl.read_csv(f\"{self.data_path}\\ART_INFO.csv\", has_header=True)\n",
-      "p:\\python\\Rebecka\\Dropout\\preprocessing\\data_loading.py:34: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  molecules = pl.read_csv(f\"{self.data_path}\\molecules.csv\", has_header=True)\n",
-      "p:\\python\\Rebecka\\Dropout\\preprocessing\\data_loading.py:52: SyntaxWarning: invalid escape sequence '\\M'\n",
-      "  complaints = pl.read_excel(f\"{self.data_path}\\MVS.xlsx\", has_header=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from data_loading import Config, DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Config' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[43mConfig\u001b[49m(config_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconfig.yaml\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m data_loader \u001b[38;5;241m=\u001b[39m DataLoader(config, exclude_product_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, nr_rows\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100000\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# get diabetes segment \u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Config' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "config = Config(config_path='../utils/config.yaml')\n",
+    "config = Config(config_path='config.yaml')\n",
     "data_loader = DataLoader(config, exclude_product_type=None, nr_rows=100000)\n",
-    "df = data_loader.load_datasets(segment=None) # "
+    "# get diabetes segment \n",
+    "df = data_loader.load_datasets(segment=\"140:Diabetes\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19, 2078)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
