--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +977,7 @@
        "└───────────┴──────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,20 +998,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "47569"
-      ]
-     },
-     "execution_count": 180,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = data[:3000]"
    ]
@@ -1032,21 +1021,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xgboost import XGBClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
@@ -1081,6 +1058,25 @@
     "data.lazy()\n",
     "train_df = data.select([\"cust_no\", \"active_flag\"]).join(df_features, on=\"cust_no\", how=\"inner\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'count_nulls'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtrain_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcount_nulls\u001b[49m()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'count_nulls'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
